--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,12 +5,12 @@ on:
         branches:
             - '**'
     push:
-        branches: [master]
+        branches: [main]
 
 jobs:
     deploy:
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
 
         steps:
             - name: Checkout code
