--- a/pyproject.toml
+++ b/pyproject.toml
@@ -97,6 +97,11 @@ dev = [
     "myst-parser>=3.0.1,<4",
 ]
 
+publish = [
+    "toml==0.10.2",
+    "setuptools==80.9.0"
+]
+
 [tool.hatch.build.targets.sdist]
 include = ["awswrangler"]
 exclude = [
