--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,12 +29,13 @@ jobs:
 
             - name: Build and Publish to CodeArtifact
               env:
-                  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-                  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-                  AWS_DEFAULT_REGION: us-east-1
+                AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+                AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+                AWS_DEFAULT_REGION: us-east-1
               run: |
-                  export TWINE_USERNAME=aws
-                  export TWINE_PASSWORD=$(aws codeartifact get-authorization-token --domain beehero --query authorizationToken --output text)
-                  export TWINE_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain beehero --repository python --format pypi --query repositoryEndpoint --output text)
-                  uv build
-                  twine upload -r beehero dist/*
+                export TWINE_USERNAME=aws
+                export TWINE_PASSWORD=$(aws codeartifact get-authorization-token --domain beehero --query authorizationToken --output text)
+                export TWINE_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain beehero --repository python --format pypi --query repositoryEndpoint --output text)
+                uv build
+                twine upload --repository-url "$TWINE_REPOSITORY_URL" -u "$TWINE_USERNAME" -p "$TWINE_PASSWORD" dist/*
+            
