--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -11,6 +11,7 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         if: github.ref == 'refs/heads/main'
+        secrets: inherit
 
         steps:
             - name: Checkout code
