--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,14 +18,14 @@ jobs:
 
             - name: Install dependencies
               run: |
-                  pip install awscli uv twine --upgrade
-                  uv sync --group publish
+                pip install awscli uv twine --upgrade
+                uv sync --group publish
 
             - name: Update version with build number
               run: |
-                  MAJOR_MINOR=$(grep '^version = ' pyproject.toml | sed 's/version = "\([0-9]*\)\.\([0-9]*\)\..*"/\1.\2/')
-                  GITHUB_RUN_NUMBER=${{ github.run_number }}
-                  sed -i "s/version = \".*\"/version = \"${MAJOR_MINOR}.${GITHUB_RUN_NUMBER}\"/" pyproject.toml
+                MAJOR_MINOR=$(grep '^version = ' pyproject.toml | sed 's/version = "\([0-9]*\)\.\([0-9]*\)\..*"/\1.\2/')
+                GITHUB_RUN_NUMBER=${{ github.run_number }}
+                sed -i "s/version = \".*\"/version = \"${MAJOR_MINOR}.${GITHUB_RUN_NUMBER}\"/" pyproject.toml
 
             - name: Build and Publish to CodeArtifact
               env:
@@ -38,5 +38,5 @@ jobs:
                 export TWINE_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain beehero --repository python --format pypi --query repositoryEndpoint --output text)
                 uv build
 #                twine upload --repository-url "$TWINE_REPOSITORY_URL" -u "$TWINE_USERNAME" -p "$TWINE_PASSWORD" dist/*
-                echo ${TWINE_REPOSITORY_URL}
+                echo $TWINE_REPOSITORY_URL
             
