--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -1,16 +1,13 @@
 name: CI/CD Pipeline
 
 on:
-    pull_request:
-        branches:
-            - '**'
     push:
-        branches: [main]
+        branches: [main, uploading-to-artifact]
 
 jobs:
     deploy:
         runs-on: ubuntu-latest
-        if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/uploading-to-artifact'
 
         steps:
             - name: Checkout code
