--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -33,6 +33,6 @@ jobs:
                   export TWINE_USERNAME=aws
                   export TWINE_PASSWORD=$(aws codeartifact get-authorization-token --domain beehero --query authorizationToken --output text)
                   export TWINE_REPOSITORY_URL=$(aws codeartifact get-repository-endpoint --domain beehero --repository python --format pypi --query repositoryEndpoint --output text)
-                  uv build
                   echo $TWINE_REPOSITORY_URL
-                  twine upload --repository-url "$TWINE_REPOSITORY_URL" -u "$TWINE_USERNAME" -p "$TWINE_PASSWORD" dist/*
+                  uv build
+                  twine upload -r beehero dist/*
